<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include android:id="@+id/appbar"
        layout="@layout/app_bar"
        />
    <TextView

        android:textSize="40sp"
        android:singleLine="true"
        android:id="@+id/display"
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_margin="10dp"
        android:hint="0"
       />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_below="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout

            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/seven"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/seven"/>
            <Button
                android:id="@+id/eight"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/eight"/>
            <Button
                android:id="@+id/nine"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/nine"/>
            <Button
                android:id="@+id/plus"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/plus"/>


        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/four"/>
            <Button
                android:id="@+id/five"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/five"/>
            <Button
                android:id="@+id/six"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/six"/>
            <Button
                android:id="@+id/minus"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/minus"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/one"/>
            <Button
                android:id="@+id/two"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/two"/>
            <Button
                android:id="@+id/three"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/three"/>
            <Button
                android:id="@+id/multiplied"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/multiplied"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/clear"/>
            <Button
                android:id="@+id/zero"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/zero"/>
            <Button
                android:id="@+id/equals"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/equals"/>
            <Button
                android:id="@+id/divided"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/divided"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>